Accessibility updates: fix colour contrast issue and updated alt text

--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,7 @@ hr.project-line {
 
 .icon-design:hover {
   cursor: pointer;
+  color: #3147ae;
 }
 
 
@@ -179,7 +180,7 @@ hr.project-line {
   /* centered */
   .home-page-sub-heading {
     margin: 20px 0 10px 0;
-    color: #6c83ea;
+    color: #3147ae;
     text-align: center;
   }
 
@@ -205,7 +206,7 @@ hr.project-line {
   /* 50-50 */
   .home-page-sub-heading {
     margin: 20px 0 10px 0;
-    color: #6c83ea;
+    color: #3147ae;
     width: 50%;
   }
 
